Add jq + one more step towards agentic hotswap